fix: remove highlight on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,7 @@
+* {
+  -webkit-tap-highlight-color: transparent;
+}
+
 #root {
   display: flex;
   flex-direction: column;
